Added logo  and brand name

--- a/architectural_diagram.html
+++ b/architectural_diagram.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agentic QA Framework - Architectural Diagram</title>
+    <title>QuAIA™ - Architectural Diagram</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -25,8 +25,8 @@
 <body class="p-4 sm:p-6 md:p-8">
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold tracking-tight">Agentic QA Framework - Architectural Diagram</h1>
-            <p class="text-slate-600 mt-2">AI Agent Orchestration System for Automating Testing Life Cycle</p>
+            <h1 class="text-3xl md:text-4xl font-bold tracking-tight">QuAIA™ - Architectural Diagram</h1>
+            <p class="text-slate-600 mt-2">Quality Assurance with Intelligent Agents — AI Agent Orchestration System for Automating Testing Life Cycle</p>
         </header>
 
         <div class="bg-white p-6 rounded-2xl shadow-lg border border-slate-200">
