--- a/architectural_diagram_DE.html
+++ b/architectural_diagram_DE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architekturdiagramm von Agentic QA Framework</title>
+    <title>QuAIA™ - Architekturdiagramm</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -25,7 +25,7 @@
 <body class="p-4 sm:p-6 md:p-8">
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold tracking-tight">Architekturdiagramm von Agentic QA Framework</h1>
+            <h1 class="text-3xl md:text-4xl font-bold tracking-tight">QuAIA™ - Architekturdiagramm</h1>
         </header>
 
         <div class="bg-white p-6 rounded-2xl shadow-lg border border-slate-200">
