--- a/flow_diagram_DE.html
+++ b/flow_diagram_DE.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ausführungsflussdiagramm</title>
+    <title>QuAIA™ - Orchestrierungsflussdiagramm</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -50,7 +50,7 @@
 </head>
 <body class="bg-gray-100 p-4 sm:p-6 md:p-8">
     <div class="max-w-7xl mx-auto bg-white rounded-xl shadow-lg p-6">
-        <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 mb-2 text-center">Agentic QA Framework: Orchestrierungsfluss</h1>
+        <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 mb-2 text-center">QuAIA™: Orchestrierungsfluss</h1>
         <div class="mermaid-container overflow-x-auto">
             <div class="mermaid">
 graph TD
